--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       - uses: hashicorp/setup-terraform@v1
-      
+        with:
+          terraform_version: 0.12.25
+
       - name: Terraform fmt
         id: fmt
         run: terraform fmt -check
