--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,9 @@ jobs:
         run: terraform fmt -check
         continue-on-error: true
 
+      - name: check env
+        run: echo "$GITHUB_OWNER"
+
       - name: Terraform Init
         id: init
         run: terraform init
