--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ on:
 
 env:
   GITHUB_OWNER: 'ShireOrg'
+  GITHUB_ORGANIZATION: 'ShireOrg'
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -34,7 +35,7 @@ jobs:
         continue-on-error: true
 
       - name: check env
-        run: echo "$GITHUB_OWNER"
+        run: echo "owner = $GITHUB_OWNER organization = $GITHUB_ORGANIZATION"
 
       - name: Terraform Init
         id: init
