--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -47,6 +47,9 @@ name: 'Terraform'
 on:
   pull_request:
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+  
 jobs:
   terraform:
     name: 'Terraform'
