--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -77,6 +77,11 @@ jobs:
       id: init
       run: terraform init
 
+   # Validate Validate the configuration files in a directory, referring only to the configuration and not accessing any remote services such as remote state, provider APIs, etc.
+    - name: Terraform Validate
+      id: validate
+      run: terraform validate -no-color
+  
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
       id: fmt
